<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sena.ejerciciomenus.MainActivity">



    <item
        android:id="@+id/Fragmentos"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="1"
        android:title="@string/Fragmentos"
        app:showAsAction="never" />

    <item
        android:id="@+id/Galeria"
        android:icon="@android:drawable/star_big_on"
        android:orderInCategory="2"
        android:title="@string/Galeria"
        app:showAsAction="never" />

    <item
        android:id="@+id/Dialogos"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="3"
        android:title="@string/Dialogos"
        app:showAsAction="never" />

    <item
        android:id="@+id/Tabs"
        android:orderInCategory="4"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/Tabs"
        app:showAsAction="never" />
    <item
        android:id="@+id/Agenda"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/Agenda"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item
        android:id="@+id/Contactos"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Contactos"
        android:orderInCategory="6"
        app:showAsAction="never" />


</menu>

